<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_pregleda"
        android:textAlignment="center"
        android:id="@+id/tw_view"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/godina"
            android:id="@+id/rb_year"/>

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mesec"
            android:id="@+id/rb_month"/>

    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible"
            android:id="@+id/layout_year">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textSize="50sp"
                android:textColor="@color/year_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/januar"
                        android:background="@color/buttons_1st_quarter"
                        android:id="@+id/button_januar"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/februar"
                        android:background="@color/buttons_1st_quarter"
                        android:id="@+id/button_februar"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/mart"
                        android:background="@color/buttons_1st_quarter"
                        android:id="@+id/button_mart"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/april"
                        android:background="@color/buttons_2nd_quarter"
                        android:id="@+id/button_april"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/maj"
                        android:background="@color/buttons_2nd_quarter"
                        android:id="@+id/button_maj"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/jun"
                        android:background="@color/buttons_2nd_quarter"
                        android:id="@+id/button_jun"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/jul"
                        android:background="@color/buttons_3rd_quarter"
                        android:id="@+id/button_jul"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/avgust"
                        android:background="@color/buttons_3rd_quarter"
                        android:id="@+id/button_avgust"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/septembar"
                        android:background="@color/buttons_3rd_quarter"
                        android:id="@+id/button_septembar"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/oktobar"
                        android:background="@color/buttons_4th_quarter"
                        android:id="@+id/button_oktobar"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/novembar"
                        android:background="@color/buttons_4th_quarter"
                        android:id="@+id/button_novembar"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/decembar"
                        android:background="@color/buttons_4th_quarter"
                        android:id="@+id/button_decembar"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/calendar_layout"
            android:visibility="invisible">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:id="@+id/year_button"
                android:background="@color/colorAccent"
                android:textColor="@color/white_button_text"/>

            <CalendarView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minDate="01/01/2020"
                android:firstDayOfWeek="2"
                android:id="@+id/calendar"/>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>