<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/event_activity_date"
        android:paddingTop="5dp"
        android:textSize="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/event_activity_name"
        android:textSize="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vreme_od"
            android:textAlignment="center"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:timePickerMode="spinner"
            android:id="@+id/time_picker_start"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vreme_do"
            android:textAlignment="center"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:timePickerMode="spinner"
            android:id="@+id/time_picker_end"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/podsetnik"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:paddingStart="10dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:paddingEnd="10dp"
            android:id="@+id/reminder_on"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:layout_centerInParent="true"
            android:text="@string/lokacija" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/location_text"
            android:layout_toStartOf="@+id/get_weather_button"
            android:hint="@string/unos_lokacija"
            android:maxLength="100"
            android:minLines="1"
            android:singleLine="true"
            android:id="@+id/location_input"
            android:layout_centerVertical="true"
            android:textSize="15dp"/>
        
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textColor="@color/white_button_text"
            android:backgroundTint="@color/colorAccent"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:text="@string/ok"
            android:id="@+id/get_weather_button"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/weather_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/prognoza_greska"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/weather_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="invisible"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/weather_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="30dp" />

            </LinearLayout>

        </FrameLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sacuvaj_dogadjaj"
            android:textSize="20dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white_button_text"
            android:layout_alignParentBottom="true"
            android:id="@+id/button_save"/>

    </RelativeLayout>

</LinearLayout>